styles/base/_theme.scss
// Store available photo theme in a map, where the key is the ID of the photo
// theme, and the value is an accent color used for things like buttons,
// controls, etc.
$theme-photos: (
  'word': $blue,
  'worship': $orange,
  'pasture': $green,
  'mountain': $blue,
  'shore': $teal,
  'stars': $royal,
  'forest': $green
);

@each $theme-name, $theme-color in $theme-colors {
  .theme-#{$theme-name} {
    background-color: $theme-color;
  }
}
@each $theme-name, $theme-color in $theme-photos {
  .theme-#{$theme-name} {
    background-color: $grey;
    background-image: url('../../public/images/background-photos/#{$theme-name}.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center top;
  }
}
// Theme-specific adjustments
.theme-mountain {
  background-position: center center;
}

